fix: improve scrollbar style on windows platform

--- a/src/components/scrollable/style.scss
+++ b/src/components/scrollable/style.scss
@@ -22,4 +22,8 @@ $react-custom-scrollbars: '.ScrollbarsCustom';
     &-Wrapper {
         height: 100%;
     }
+
+    &-Scroller::-webkit-scrollbar {
+        display: none;
+    }
 }
